2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c: Use the new MCE dbus API to trigger a
	  power key event (Closes NB#33771)

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "The SWAP key does not bring back the previously topped
	application" (Closes NB#36149)
	* hn_wm_toggle_desktop(): toggles between topping last app and 
	  topping the desktop.

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: gtk_object_sink
	  the items to get rid to the floating reference, to be sure
	  that the items get finalized when reloaded (Closes NB#37028)

2006-08-08  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Width of the 'Others' menu gets altered in normal mode
	after opening it in thumb mode." (Closes NB#36135)
	* hildon-navigator/others-menu.c:
	  - others_menu_size_request(): if request size is not bigger than menu
	    max width, reset menu size request

2006-08-07  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.17

2006-08-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/Makefile.am: Install the restoration script in it2007

2006-08-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watched-window.[ch]: Add an ensure
	  parameter to attempt_signal_kill to allow sending SIGTERM without
	  SIGKILL
	* hildon-navigator/hn-wm-memory.c: When asked to kill everyone,
	  only send SIGTERM

2006-08-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: 
	  Disconnect locical color changes signal to circumvent a bug in
	  hildon-libs (Closes NB#33339)

2006-08-03  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Mode changes are retained even after pressing cancel
	button" (Closes NB#36622)
	* hildon-home/hildon-home-main.c:
	  - renamed global variable to match role
	  - create_background_preview(): removed storing mode value
	  - set_background_dialog_selected(): Setting correct mode value to