@@ -1,5 +1,10 @@
 2006-08-08  Johan Bilien <johan.bilien@nokia.com>
 
+	* hildon-navigator/hn-keys.c: Fixed a warning which happened in the
+	  sardine environment
+
+2006-08-08  Johan Bilien <johan.bilien@nokia.com>
+
 	* hildon-navigator/hn-keys.c: Use the new MCE dbus API to trigger a
 	  power key event (Closes NB#33771)
 
